syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "dtos/traffic_statistics.proto";

option go_package = "internal/data/pb";

// DETECTION POINT BY LANE
message BulkCreateTrafficDataByDetectionPointByLaneResponse {
    string message = 1;
}
  
message GetTrafficDataByDetectionPointByLaneStatisticsResponse {
    string data_source_name = 1;
    uint32 records_count = 2;
    google.protobuf.Timestamp first_record_timestamp = 3;
    google.protobuf.Timestamp last_record_timestamp = 4;
    repeated TrafficStatisticsLane statistics = 5;
}

// DETECTION POINT
message BulkCreateTrafficDataByDetectionPointResponse {
    string message = 1;
}
  
message GetTrafficDataByDetectionPointStatisticsResponse {
    string data_source_name = 1;
    uint32 records_count = 2;
    google.protobuf.Timestamp first_record_timestamp = 3;
    google.protobuf.Timestamp last_record_timestamp = 4;
    repeated TrafficStatisticsDetectionPoint statistics = 5;
}
  
// DETECTION SECTION
message BulkCreateTrafficDataByDetectionSectionResponse {
    string message = 1;
}
  
message GetTrafficDataByDetectionSectionStatisticsResponse {
    string data_source_name = 1;
    uint32 records_count = 2;
    google.protobuf.Timestamp first_record_timestamp = 3;
    google.protobuf.Timestamp last_record_timestamp = 4;
    repeated TrafficStatisticsDetectionSection statistics = 5;
}


// DOWNLOAD

message DownloadResponse {
    bytes file_content = 1;
    string filename = 2;
    int64 file_size = 3;
    string content_type = 4;
  }