syntax = "proto3";

package pb;

option go_package = "internal/data/pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "dtos/history_day_traffic_data_detection_point.proto";
import "dtos/traffic_requests.proto";
import "dtos/traffic_responses.proto";


option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  security_definitions: {
    security: {
      key: "bearer"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Authentication token, prefixed by Bearer: Bearer <token>"
      }
    }
  }
  security: {
    security_requirement: {
      key: "bearer"
    }
  }
};

service HistoryDayTrafficDataByDetectionPointService {
  rpc ListHistoryDayTrafficDataByDetectionPoint(ListTrafficDataByDetectionPointRequest) returns (ListHistoryDayTrafficDataByDetectionPointResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/history_day/detection_point/list"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc GetHistoryDayTrafficDataByDetectionPoint(GetTrafficDataByDetectionPointRequest) returns (GetHistoryDayTrafficDataByDetectionPointResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/history_day/detection_point/single"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc CreateHistoryDayTrafficDataByDetectionPoint(CreateHistoryDayTrafficDataByDetectionPointRequest) returns (CreateHistoryDayTrafficDataByDetectionPointResponse) {
    option (google.api.http) = {
      post: "/api/v1/traffic/history_day/detection_point",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc UpdateHistoryDayTrafficDataByDetectionPoint(UpdateHistoryDayTrafficDataByDetectionPointRequest) returns (UpdateHistoryDayTrafficDataByDetectionPointResponse) {
    option (google.api.http) = {
      patch: "/api/v1/traffic/history_day/detection_point",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc DeleteHistoryDayTrafficDataByDetectionPoint(DeleteTrafficDataByDetectionPointRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/traffic/history_day/detection_point"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }


  rpc BulkCreateHistoryDayTrafficDataByDetectionPoint(BulkCreateTrafficDataByDetectionPointRequest) returns (BulkCreateTrafficDataByDetectionPointResponse) {
    option (google.api.http) = {
      post: "/api/v1/traffic/history_day/detection_point/bulk",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc GetHistoryDayTrafficDataByDetectionPointStatistics(GetTrafficDataByDetectionPointStatisticsRequest) returns (GetTrafficDataByDetectionPointStatisticsResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/history_day/detection_point/statistics"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc ListHistoryDayTrafficDataByDetectionPointDaily(ListTrafficDataByDetectionPointDailyRequest) returns (ListHistoryDayTrafficDataByDetectionPointDailyResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/history_day/detection_point/daily"     
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc DownloadHistoryDayTrafficDataByDetectionPoint(DownloadTrafficDataByDetectionPointRequest) returns (DownloadResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/history_day/detection_point/download"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }
}



message ListHistoryDayTrafficDataByDetectionPointResponse {
  repeated HistoryDayTrafficDataByDetectionPoint history_day_traffic_data_by_detection_points = 1;
  uint32 total_count = 2;
}

message GetHistoryDayTrafficDataByDetectionPointResponse {
 repeated HistoryDayTrafficDataByDetectionPoint history_day_traffic_data_by_detection_point = 1;
 uint32 total_count = 2;
}

message CreateHistoryDayTrafficDataByDetectionPointRequest {
  HistoryDayTrafficDataByDetectionPoint history_day_traffic_data_by_detection_point = 1;
}

message CreateHistoryDayTrafficDataByDetectionPointResponse {
  HistoryDayTrafficDataByDetectionPoint history_day_traffic_data_by_detection_point = 1;
}

message UpdateHistoryDayTrafficDataByDetectionPointRequest {
  HistoryDayTrafficDataByDetectionPoint history_day_traffic_data_by_detection_point = 1;
}

message UpdateHistoryDayTrafficDataByDetectionPointResponse {
  HistoryDayTrafficDataByDetectionPoint history_day_traffic_data_by_detection_point = 1;
}

message ListHistoryDayTrafficDataByDetectionPointDailyResponse {
  repeated HistoryDayTrafficDataByDetectionPoint daily_stats = 1;
}
