syntax = "proto3";

package pb;

option go_package = "internal/data/pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "dtos/real_time_traffic_data_detection_section.proto";
import "dtos/traffic_requests.proto";
import "dtos/traffic_responses.proto";


option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  security_definitions: {
    security: {
      key: "bearer"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Authentication token, prefixed by Bearer: Bearer <token>"
      }
    }
  }
  security: {
    security_requirement: {
      key: "bearer"
    }
  }
};

service RealTimeTrafficDataByDetectionSectionService {
  rpc ListRealTimeTrafficDataByDetectionSections(ListTrafficDataByDetectionSectionRequest) returns (ListRealTimeTrafficDataByDetectionSectionsResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/real_time/detection_section/list"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc GetRealTimeTrafficDataByDetectionSection(GetTrafficDataByDetectionSectionRequest) returns (GetRealTimeTrafficDataByDetectionSectionsResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/real_time/detection_section/single"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc CreateRealTimeTrafficDataByDetectionSection(CreateRealTimeTrafficDataByDetectionSectionRequest) returns (CreateRealTimeTrafficDataByDetectionSectionResponse) {
    option (google.api.http) = {
      post: "/api/v1/traffic/real_time/detection_section",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc UpdateRealTimeTrafficDataByDetectionSection(UpdateRealTimeTrafficDataByDetectionSectionRequest) returns (UpdateRealTimeTrafficDataByDetectionSectionResponse) {
    option (google.api.http) = {
      patch: "/api/v1/traffic/real_time/detection_section",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc DeleteRealTimeTrafficDataByDetectionSection(DeleteTrafficDataByDetectionSectionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/traffic/real_time/detection_section"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };    
  }

  rpc BulkCreateRealTimeTrafficDataByDetectionSection(BulkCreateTrafficDataByDetectionSectionRequest) returns (BulkCreateTrafficDataByDetectionSectionResponse) {
    option (google.api.http) = {
      post: "/api/v1/traffic/real_time/detection_section/bulk",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc GetRealTimeTrafficDataByDetectionSectionStatistics(GetTrafficDataByDetectionSectionStatisticsRequest) returns (GetTrafficDataByDetectionSectionStatisticsResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/real_time/detection_section/statistics"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc ListRealTimeTrafficDataByDetectionSectionDaily(ListTrafficDataByDetectionSectionDailyRequest) returns (ListRealTimeTrafficDataByDetectionSectionDailyResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/real_time/detection_section/daily"     
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }


  rpc DownloadRealTimeTrafficDataByDetectionSection(DownloadTrafficDataByDetectionSectionRequest) returns (DownloadResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/real_time/detection_section/download"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }
}


message ListRealTimeTrafficDataByDetectionSectionsResponse {
  repeated RealTimeTrafficDataByDetectionSection real_time_traffic_data_by_detection_section = 1;
  uint32 total_count = 2;
}


message GetRealTimeTrafficDataByDetectionSectionsResponse {
  repeated RealTimeTrafficDataByDetectionSection real_time_traffic_data_by_detection_section = 1;
  uint32 total_count = 2;

}

message CreateRealTimeTrafficDataByDetectionSectionRequest {
  RealTimeTrafficDataByDetectionSection real_time_traffic_data_by_detection_section = 1;
}

message CreateRealTimeTrafficDataByDetectionSectionResponse {
  RealTimeTrafficDataByDetectionSection real_time_traffic_data_by_detection_section = 1;
}

message UpdateRealTimeTrafficDataByDetectionSectionRequest {
  RealTimeTrafficDataByDetectionSection real_time_traffic_data_by_detection_section = 1;
}

message UpdateRealTimeTrafficDataByDetectionSectionResponse {
  RealTimeTrafficDataByDetectionSection real_time_traffic_data_by_detection_section = 1;
}

message ListRealTimeTrafficDataByDetectionSectionDailyResponse {
  repeated RealTimeTrafficDataByDetectionSection daily_stats = 1;
}